2009-09-22  Richard Guenther  <rguenther@suse.de>

PR lto/39276
	* doc/invoke.texi (-fltrans-driver): Remove.

	lto/
	* lto.c (lto_execute_ltrans): Perform ltrans phase manually.
	* Make-lang.in: Remove ltrans-driver stuff.
	* config-lang.in: Likewise.
	* lang.opt (fltrans-driver): Remove.
	* lto-lang.c (lto_init_options): Remove code initializing
	ltrans_driver.
	* ltrans-driver: Remove.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/lto@151973 138bc75d-0d04-0410-961f-82ee72b054a4